test/fail/optargs/variants_cannot_optarg.lly
#[
SyntaxError: Variant types cannot have default values.
Where: File "variants_cannot_optarg.lly" at line 7
]#

enum Option {
    Some(*integer),
    None
}
